fix: report filter